#
# This file is part of GEO Knowledge Hub Package Loader.
# Copyright (C) 2021 GEO Secretariat.
#
# GEO Knowledge Hub Package Loader is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.
#

[metadata]
name = geo-package-loader
version = attr: geo_package_loader.__version__
description = CLI tool to load resources to the GEO Knowledge Hub.
long_description = file: README.rst, CHANGES.rst
keywords = Knowledge Packages Earth Observations
license = MIT
author = GEO Secretariat
author_email = secretariat@geosec.org
platforms = any
url = https://github.com/geo-knowledge-hub/geo-package-loader
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Click>=7.0
    requests>=2.20

[options.extras_require]
docs =
    Sphinx>=2.2
    sphinx_rtd_theme
    sphinx-copybutton
tests =
    coverage>=4.5
    coveralls>=1.8
    pytest>=5.2
    pytest-cov>=2.8
    pytest-pep8>=1.0
    pydocstyle>=4.0
    isort>4.3
    check-manifest>=0.40

[options.entry_points]
console_scripts =
    geo-package-loader = geo_package_loader.cli:cli

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
ignore = E203, W503, E501, W391

[compile_catalog]
directory = geo_knowledge_hub/translations/
use-fuzzy = True

[isort]
profile = black

[check-manifest]
ignore =
    *-requirements.txt
    Vagrantfile
    bootstrap.sh

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=geo_package_loader --cov-report=term-missing
testpaths = docs tests geo_package_loader
